crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_8.snap
---
source: src/test.rs
expression: output
---
==INPUT==
import { $, component$ } from "@qwik.dev/core";

export const Header = component$(() => {
  return $((hola) => {
    const hola = this;
    const { something, styff } = hola;
    const hello = hola.nothere.stuff[global];
    return <Header />;
  });
});

============================= test.tsx ==
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Header_component_XXXXXXXXXXXX");
export const Header = /*#__PURE__*/ componentQrl(
  /*#__PURE__*/ qrl(i_XXXXXXXXXXXX, "Header_component_XXXXXXXXXXXX"),
);
============================= test.tsx_Header_component_XXXXXXXXXXXX.tsx (ENTRY POINT)==
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Header_component_1_XXXXXXXXXXXX");
export const Header_component_XXXXXXXXXXXX = () => {
  return /*#__PURE__*/ qrl(i_XXXXXXXXXXXX, "Header_component_1_XXXXXXXXXXXX");
};
/*
{
  "origin": "test.tsx",
  "name": "Header_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Header_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Header_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/
============================= test.tsx_Header_component_1_XXXXXXXXXXXX.tsx (ENTRY POINT)==
import { Header } from "./test";
export const Header_component_1_XXXXXXXXXXXX = (hola) => {
  const hola = this;
  hola.nothere.stuff[global];
  return <Header />;
};
/*
{
  "origin": "test.tsx",
  "name": "Header_component_1_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Header_component_1",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Header_component_1_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": "Header_component_XXXXXXXXXXXX",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "paramNames": [
    "hola"
  ]
}
*/
== DIAGNOSTICS ==

[]
