crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_9.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { $, component$ } from "@qwik.dev/core";
const Header = $((decl1, { decl2 }, [decl3]) => {
  const { decl4, key: decl5 } = this;
  let [decl6, ...decl7] = stuff;
  let decl8 = 1,
    decl9;
  function decl10(decl11, { decl12 }, [decl13]) {}
  class decl14 {
    method(decl15, { decl16 }, [decl17]) {}
  }
  try {
  } catch (decl18) {}
  try {
  } catch ({ decl19 }) {}
});

=== test.tsx ===
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Header_XXXXXXXXXXXX");
/* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Header_XXXXXXXXXXXX");
=== test.tsx_Header_XXXXXXXXXXXX.tsx === (ENTRY)
export const Header_XXXXXXXXXXXX = (decl1, { decl2 }, [decl3]) => {
  const { decl4, key: decl5 } = this;
  let [decl6, ...decl7] = stuff;
};
/*
{
  "origin": "test.tsx",
  "name": "Header_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Header",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Header_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "paramNames": [
    "decl1",
    "{decl2}",
    "[decl3]"
  ]
}
*/
=== DIAGNOSTICS ===

[]
