crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_component_with_event_listeners_inside_loop.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { $, component$, useStore, useSignal } from "@qwik.dev/core";
export const App = component$(() => {
  const cart = useStore<string[]>([]);
  const results = useSignal(["foo"]);
  function loopArrowFn(results: string[]) {
    return results.map((item) => (
      <span
        onClick$={() => {
          cart.push(item);
        }}
      >
        {item}
      </span>
    ));
  }
  function loopForI(results: string[]) {
    const items = [];
    for (let i = 0; i < results.length; i++) {
      items.push(
        <span
          onClick$={() => {
            cart.push(results[i]);
          }}
        >
          {results[i]}
        </span>,
      );
    }
    return items;
  }
  function loopForOf(results: string[]) {
    const items = [];
    for (const item of results) {
      items.push(
        <span
          onClick$={() => {
            cart.push(item);
          }}
        >
          {item}
        </span>,
      );
    }
    return items;
  }
  function loopForIn(results: string[]) {
    const items = [];
    for (const key in results) {
      items.push(
        <span
          onClick$={() => {
            cart.push(results[key]);
          }}
        >
          {results[key]}
        </span>,
      );
    }
    return items;
  }
  function loopWhile(results: string[]) {
    const items = [];
    let i = 0;
    while (i < results.length) {
      items.push(
        <span
          onClick$={() => {
            cart.push(results[i]);
          }}
        >
          {results[i]}
        </span>,
      );
      i++;
    }
    return items;
  }
  return (
    <div>
      {results.value.map((item) => (
        <button
          id="second"
          onClick$={() => {
            cart.push(item);
          }}
        >
          {item}
        </button>
      ))}
      {loopArrowFn(results.value)}
      {loopForI(results.value)}
      {loopForOf(results.value)}
      {loopForIn(results.value)}
      {loopWhile(results.value)}
    </div>
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_XXXXXXXXXXXX");
export const App = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "App_component_XXXXXXXXXXXX"),
);
=== test.tsx_App_component_XXXXXXXXXXXX.js === (ENTRY)
import { _fnSignal } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
const _hf0 = (p0, p1) => p1[p0];
const _hf0_str = "p1[p0]";
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_loopWhile_span_q_e_click_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_loopForI_span_q_e_click_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_div_button_q_e_click_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () =>
  import("./test.tsx_App_component_loopArrowFn_span_q_e_click_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_loopForIn_span_q_e_click_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_loopForOf_span_q_e_click_XXXXXXXXXXXX");
export const App_component_XXXXXXXXXXXX = () => {
  const cart = useStore([]);
  const results = useSignal(["foo"]);
  const App_component_div_button_q_e_click_XXXXXXXXXXXX = /* @__PURE__ */ qrl(
    i_XXXXXXXXXXXX,
    "App_component_div_button_q_e_click_XXXXXXXXXXXX",
    [cart],
  );
  function loopArrowFn(results) {
    const App_component_loopArrowFn_span_q_e_click_XXXXXXXXXXXX = /* @__PURE__ */ qrl(
      i_XXXXXXXXXXXX,
      "App_component_loopArrowFn_span_q_e_click_XXXXXXXXXXXX",
      [cart],
    );
    return results.map((item) =>
      /* @__PURE__ */ _jsxSorted(
        "span",
        {
          "q-e:click": App_component_loopArrowFn_span_q_e_click_XXXXXXXXXXXX,
          "q:p": item,
        },
        null,
        item,
        0,
        "u6_0",
      ),
    );
  }
  function loopForI(results) {
    const items = [];
    const App_component_loopForI_span_q_e_click_XXXXXXXXXXXX = /* @__PURE__ */ qrl(
      i_XXXXXXXXXXXX,
      "App_component_loopForI_span_q_e_click_XXXXXXXXXXXX",
      [cart, results],
    );
    for (let i = 0; i < results.length; i++)
      items.push(
        /* @__PURE__ */ _jsxSorted(
          "span",
          {
            "q-e:click": App_component_loopForI_span_q_e_click_XXXXXXXXXXXX,
            "q:p": i,
          },
          null,
          _fnSignal(_hf0, [i, results], _hf0_str),
          0,
          "u6_1",
        ),
      );
    return items;
  }
  function loopForOf(results) {
    const items = [];
    const App_component_loopForOf_span_q_e_click_XXXXXXXXXXXX = /* @__PURE__ */ qrl(
      i_XXXXXXXXXXXX,
      "App_component_loopForOf_span_q_e_click_XXXXXXXXXXXX",
      [cart],
    );
    for (const item of results)
      items.push(
        /* @__PURE__ */ _jsxSorted(
          "span",
          {
            "q-e:click": App_component_loopForOf_span_q_e_click_XXXXXXXXXXXX,
            "q:p": item,
          },
          null,
          item,
          2,
          "u6_2",
        ),
      );
    return items;
  }
  function loopForIn(results) {
    const items = [];
    const App_component_loopForIn_span_q_e_click_XXXXXXXXXXXX = /* @__PURE__ */ qrl(
      i_XXXXXXXXXXXX,
      "App_component_loopForIn_span_q_e_click_XXXXXXXXXXXX",
      [cart, results],
    );
    for (const key in results)
      items.push(
        /* @__PURE__ */ _jsxSorted(
          "span",
          {
            "q-e:click": App_component_loopForIn_span_q_e_click_XXXXXXXXXXXX,
            "q:p": key,
          },
          null,
          _fnSignal(_hf0, [key, results], _hf0_str),
          0,
          "u6_3",
        ),
      );
    return items;
  }
  function loopWhile(results) {
    const items = [];
    let i = 0;
    const App_component_loopWhile_span_q_e_click_XXXXXXXXXXXX = /* @__PURE__ */ qrl(
      i_XXXXXXXXXXXX,
      "App_component_loopWhile_span_q_e_click_XXXXXXXXXXXX",
      [cart, results],
    );
    while (i < results.length) {
      items.push(
        /* @__PURE__ */ _jsxSorted(
          "span",
          {
            "q-e:click": App_component_loopWhile_span_q_e_click_XXXXXXXXXXXX,
            "q:p": i,
          },
          null,
          _fnSignal(_hf0, [i, results], _hf0_str),
          0,
          "u6_4",
        ),
      );
      i++;
    }
    return items;
  }
  return /* @__PURE__ */ _jsxSorted(
    "div",
    null,
    null,
    [
      results.value.map((item) =>
        /* @__PURE__ */ _jsxSorted(
          "button",
          {
            "q-e:click": App_component_div_button_q_e_click_XXXXXXXXXXXX,
            "q:p": item,
          },
          {
            id: "second",
          },
          item,
          0,
          "u6_5",
        ),
      ),
      loopArrowFn(results.value),
      loopForI(results.value),
      loopForOf(results.value),
      loopForIn(results.value),
      loopWhile(results.value),
    ],
    1,
    "u6_6",
  );
};
/*
{
  "origin": "test.tsx",
  "name": "App_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/
=== test.tsx_App_component_loopArrowFn_span_q_e_click_XXXXXXXXXXXX.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
export const App_component_loopArrowFn_span_q_e_click_XXXXXXXXXXXX = (_, _1, item) => {
  const cart = _captures[0];
  cart.push(item);
};
/*
{
  "origin": "test.tsx",
  "name": "App_component_loopArrowFn_span_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_component_loopArrowFn_span_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_loopArrowFn_span_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "App_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "paramNames": [
    "_",
    "_",
    "item"
  ],
  "captureNames": [
    "cart"
  ]
}
*/
=== test.tsx_App_component_loopForI_span_q_e_click_XXXXXXXXXXXX.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
export const App_component_loopForI_span_q_e_click_XXXXXXXXXXXX = (_, _1, i) => {
  const cart = _captures[0],
    results = _captures[1];
  cart.push(results[i]);
};
/*
{
  "origin": "test.tsx",
  "name": "App_component_loopForI_span_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_component_loopForI_span_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_loopForI_span_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "App_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "paramNames": [
    "_",
    "_",
    "i"
  ],
  "captureNames": [
    "cart",
    "results"
  ]
}
*/
=== test.tsx_App_component_loopForOf_span_q_e_click_XXXXXXXXXXXX.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
export const App_component_loopForOf_span_q_e_click_XXXXXXXXXXXX = (_, _1, item) => {
  const cart = _captures[0];
  cart.push(item);
};
/*
{
  "origin": "test.tsx",
  "name": "App_component_loopForOf_span_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_component_loopForOf_span_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_loopForOf_span_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "App_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "paramNames": [
    "_",
    "_",
    "item"
  ],
  "captureNames": [
    "cart"
  ]
}
*/
=== test.tsx_App_component_loopForIn_span_q_e_click_XXXXXXXXXXXX.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
export const App_component_loopForIn_span_q_e_click_XXXXXXXXXXXX = (_, _1, key) => {
  const cart = _captures[0],
    results = _captures[1];
  cart.push(results[key]);
};
/*
{
  "origin": "test.tsx",
  "name": "App_component_loopForIn_span_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_component_loopForIn_span_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_loopForIn_span_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "App_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "paramNames": [
    "_",
    "_",
    "key"
  ],
  "captureNames": [
    "cart",
    "results"
  ]
}
*/
=== test.tsx_App_component_loopWhile_span_q_e_click_XXXXXXXXXXXX.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
export const App_component_loopWhile_span_q_e_click_XXXXXXXXXXXX = (_, _1, i) => {
  const cart = _captures[0],
    results = _captures[1];
  cart.push(results[i]);
};
/*
{
  "origin": "test.tsx",
  "name": "App_component_loopWhile_span_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_component_loopWhile_span_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_loopWhile_span_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "App_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "paramNames": [
    "_",
    "_",
    "i"
  ],
  "captureNames": [
    "cart",
    "results"
  ]
}
*/
=== test.tsx_App_component_div_button_q_e_click_XXXXXXXXXXXX.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
export const App_component_div_button_q_e_click_XXXXXXXXXXXX = (_, _1, item) => {
  const cart = _captures[0];
  cart.push(item);
};
/*
{
  "origin": "test.tsx",
  "name": "App_component_div_button_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_component_div_button_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_div_button_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "App_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "paramNames": [
    "_",
    "_",
    "item"
  ],
  "captureNames": [
    "cart"
  ]
}
*/
=== DIAGNOSTICS ===

[]
