crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_dead_code.snap
---
source: src/test.rs
expression: output
---
==INPUT==
import { component$ } from "@qwik.dev/core";
import { deps } from "deps";

export const Foo = component$(({ foo }) => {
  useMount$(() => {
    if (false) {
      deps();
    }
  });
  return <div />;
});

============================= test.tsx ==
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Foo_component_XXXXXXXXXXXX");
export const Foo = /*#__PURE__*/ componentQrl(
  /*#__PURE__*/ qrl(i_XXXXXXXXXXXX, "Foo_component_XXXXXXXXXXXX"),
);

Some(
  '{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":";;;AAGA,OAAO,MAAM,oBAAM,4EAOhB"}',
);
============================= test.tsx_Foo_component_XXXXXXXXXXXX.tsx (ENTRY POINT)==
export const Foo_component_XXXXXXXXXXXX = (_rawProps) => {
  useMount$(() => {});
  return <div />;
};

Some(
  '{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":"yCAG8B;IAC5B,UAAU,KAIV;IACA,QAAQ;AACV"}',
);
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Foo_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    106,
    203
  ],
  "paramNames": [
    "_rawProps"
  ]
}
*/
== DIAGNOSTICS ==

[]
